syntax = "proto3";

import "base.proto";

message GetSystemInfoResponse {
  string os_name = 1;
  string os_release = 2;
  float uptime = 3;
}




service ClientServicer {
  rpc Ping(BaseRequest) returns (BaseResponse) {}
  rpc GetSystemInfo(BaseRequest) returns (GetSystemInfoResponse) {}
  rpc GetMemoryInfo(BaseRequest) returns (GetMemoryInfoResponse) {}
  rpc GetCPUInfo(BaseRequest) returns (GetCPUInfoResponse) {}
  rpc GetNetInfo(BaseRequest) returns (GetNetInfoResponse) {}
}
